--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         <div class="sidebar">
             <div class="channel-sidebar">
                 <div class="server-header">
-                    P2P Chat Server
+                    Lyla Testing #1
                 </div>
                 
                 <div class="channels-container">
@@ -508,7 +508,7 @@
             <div class="chat-header">
                 <span class="channel-icon">#</span>
                 <span class="chat-title">general</span>
-                <span class="channel-topic">• P2P Chat Room</span>
+                <span class="channel-topic">• Lyla Testing #1</span>
                 <div style="margin-left: auto;">
                     <span class="connection-status disconnected" id="connectionStatus">Disconnected</span>
                 </div>
@@ -516,7 +516,7 @@
 
             <div class="messages-container" id="messagesContainer">
                 <div class="system-message">
-                    Welcome to the P2P chat! Click the "connect" channel to join a room.
+                    Welcome to the Lyla Testing #1 chat! Click the "connect" channel to join a room.
                 </div>
             </div>
 
