--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
             authDomain: "chatapp-27b81.firebaseapp.com",
             databaseURL: "https://chatapp-27b81.firebaseio.com/",
             projectId: "chatapp-27b81",
-            storageBucket: "chatapp-27b81.firebasestorage.app",
+            storageBucket: "chatapp-27b81.appspot.com",
             messagingSenderId: "787626167817",
             appId: "1:787626167817:web:f32b6294fab3a6385532d8"
         };
