--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
 
     <!-- Firebase SDK -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-database-compat.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase--compat.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
 
     <script>
@@ -905,7 +905,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyAgtHnNckPl-zY94sUMKYGG57tS-Qr4oMw",
             authDomain: "chatapp-27b81.firebaseapp.com",
-            databaseURL: "https://chatapp-27b81.firebaseio.com/",
+            databaseURL: "https://chatapp-27b81-default-rtdb.europe-west1.firebasedatabase.app/",
             projectId: "chatapp-27b81",
             storageBucket: "chatapp-27b81.appspot.com",
             messagingSenderId: "787626167817",
