--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Chat</title>
+    <title>Global Chat • Discord</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Whitney:wght@400;500;600;700&display=swap');
 
@@ -183,6 +183,7 @@
             align-items: center;
             box-shadow: 0 1px 0 rgba(4,4,5,0.2), 0 1.5px 0 rgba(6,6,7,0.05), 0 2px 0 rgba(4,4,5,0.05);
             z-index: 10;
+            flex-shrink: 0; /* Prevent shrinking */
         }
 
         .channel-info {
@@ -357,12 +358,14 @@
             flex: 1;
             overflow: hidden;
             position: relative;
+            min-height: 0; /* Important for flex child to shrink */
         }
 
         .messages-container {
             height: 100%;
             overflow-y: auto;
             padding: 16px 16px 0 16px;
+            box-sizing: border-box;
         }
 
         .message-group {
@@ -515,6 +518,7 @@
         .typing-container {
             padding: 8px 16px;
             min-height: 32px;
+            flex-shrink: 0; /* Prevent shrinking */
         }
 
         .typing-indicator {
@@ -550,6 +554,9 @@
         /* Message Input */
         .message-input-container {
             padding: 16px;
+            flex-shrink: 0; /* Prevent shrinking */
+            background: #36393f;
+            border-top: 1px solid #202225;
         }
 
         .message-input-wrapper {
